--- a/guide/src/qs_12.md
+++ b/guide/src/qs_12.md
@@ -23,7 +23,7 @@ fn main() {
 
 ## Directory
 
-To serve all files from specific directory `StaticFiles` type could be used. 
+To serve files from specific directory and sub-directories `StaticFiles` type could be used. 
 `StaticFiles` could be registered with `Application::route` method.
 
 ```rust
@@ -36,6 +36,6 @@ fn main() {
 }
 ```
 
-First parameter is a base directory. Second parameter is `show_index`, if it set to *true*
+First parameter is a base directory. Second parameter is *show_index*, if it is set to *true*
 directory listing would be returned for directories, if it is set to *false*
 then *404 Not Found* would be returned instead of directory listing.
