introduce route predicates

--- a/guide/src/qs_12.md
+++ b/guide/src/qs_12.md
@@ -16,7 +16,7 @@ fn index(req: HttpRequest) -> Result<fs::NamedFile> {
 
 fn main() {
     Application::default("/")
-        .resource(r"/a/{tail:*}", |r| r.get(index))
+        .resource(r"/a/{tail:*}", |r| r.method(Method::GET).handler(index))
         .finish();
 }
 ```
