--- a/guide/src/qs_10.md
+++ b/guide/src/qs_10.md
@@ -50,7 +50,7 @@ INFO:actix_web::middlewares::logger: 127.0.0.1:59947 [02/Dec/2017:00:22:40 -0800
 
  `%b`  Size of response in bytes, including HTTP headers
 
- `%T` Time taken to serve the request, in seconds with floating fraction in .06f format
+ `%T`  Time taken to serve the request, in seconds with floating fraction in .06f format
 
  `%D`  Time taken to serve the request, in milliseconds
 
@@ -63,7 +63,7 @@ INFO:actix_web::middlewares::logger: 127.0.0.1:59947 [02/Dec/2017:00:22:40 -0800
 
 ## Default headers
 
-It is possible to set default response headers with `DefaultHeaders` middleware.
+Tto set default response headers `DefaultHeaders` middleware could be used.
 *DefaultHeaders* middleware does not set header if response headers already contains it.
 
 ```rust
@@ -77,8 +77,8 @@ fn main() {
                 .header("X-Version", "0.2")
                 .finish())
         .resource("/test", |r| {
-             r.get(|req| httpcodes::HTTPOk);
-             r.handler(Method::HEAD, |req| httpcodes::HTTPMethodNotAllowed);
+             r.method(Method::GET).handler(|req| httpcodes::HTTPOk);
+             r.method(Method::HEAD).handler(|req| httpcodes::HTTPMethodNotAllowed);
         })
        .finish();
 }
