renamed Route::handler to Route::f, added Route::h to register Handler

--- a/guide/src/qs_10.md
+++ b/guide/src/qs_10.md
@@ -77,8 +77,8 @@ fn main() {
                 .header("X-Version", "0.2")
                 .finish())
         .resource("/test", |r| {
-             r.method(Method::GET).handler(|req| httpcodes::HTTPOk);
-             r.method(Method::HEAD).handler(|req| httpcodes::HTTPMethodNotAllowed);
+             r.method(Method::GET).f(|req| httpcodes::HTTPOk);
+             r.method(Method::HEAD).f(|req| httpcodes::HTTPMethodNotAllowed);
         })
        .finish();
 }
