use Route for Applicaiton handlers

--- a/guide/src/qs_12.md
+++ b/guide/src/qs_12.md
@@ -32,7 +32,7 @@ extern crate actix_web;
 
 fn main() {
     actix_web::Application::default("/")
-        .route("/static", actix_web::fs::StaticFiles::new(".", true))
+        .route("/static", |r| r.h(actix_web::fs::StaticFiles::new(".", true)))
         .finish();
 }
 ```
