--- a/guide/src/qs_13.md
+++ b/guide/src/qs_13.md
@@ -1,10 +1,10 @@
 # HTTP/2
 
-Actix web automatically upgrades connection to `http/2` if possible.
+Actix web automatically upgrades connection to *HTTP/2* if possible.
 
 ## Negotiation
 
-`HTTP/2` protocol over tls without prior knowlage requires
+*HTTP/2* protocol over tls without prior knowlage requires
 [tls alpn](https://tools.ietf.org/html/rfc7301). At the moment only
 `rust-openssl` has support. Turn on `alpn` feature to enable `alpn` negotiation.
 With enable `alpn` feature `HttpServer` provides
@@ -27,14 +27,14 @@ fn main() {
 
     HttpServer::new(
         Application::default("/")
-            .handler("/index.html", index)
+            .route("/index.html", |r| r.f(index))
         .serve_tls::<_, ()>("127.0.0.1:8080", pkcs12).unwrap();
 }
 ```
 
-Upgrade to `http/2` schema described in
+Upgrade to *HTTP/2* schema described in
 [rfc section 3.2](https://http2.github.io/http2-spec/#rfc.section.3.2) is not supported.
-Starting `http/2` with prior knowledge is supported for both clear text connection
+Starting *HTTP/2* with prior knowledge is supported for both clear text connection
 and tls connection. [rfc section 3.4](https://http2.github.io/http2-spec/#rfc.section.3.4)
 
 Please check [example](https://github.com/actix/actix-web/tree/master/examples/tls) 
