remove Applicaiton::route, resource is enough

--- a/guide/src/qs_12.md
+++ b/guide/src/qs_12.md
@@ -33,7 +33,7 @@ use actix_web::*;
 
 fn main() {
     Application::default("/")
-        .route("/static", |r| r.h(fs::StaticFiles::new(".", true)))
+        .resource("/static", |r| r.h(fs::StaticFiles::new(".", true)))
         .finish();
 }
 ```
