simplify application creation

--- a/guide/src/qs_10.md
+++ b/guide/src/qs_10.md
@@ -15,12 +15,12 @@ Default `Logger` could be created with `default` method, it uses the default for
   %a %t "%r" %s %b "%{Referrer}i" "%{User-Agent}i" %T
 ```
 ```rust
-extern crate actix_web;
+# extern crate actix_web;
 use actix_web::Application;
 use actix_web::middlewares::Logger;
 
 fn main() {
-    Application::default("/")
+    Application::new("/")
        .middleware(Logger::default())
        .middleware(Logger::new("%a %{User-Agent}i"))
        .finish();
@@ -67,11 +67,11 @@ Tto set default response headers `DefaultHeaders` middleware could be used.
 *DefaultHeaders* middleware does not set header if response headers already contains it.
 
 ```rust
-extern crate actix_web;
+# extern crate actix_web;
 use actix_web::*;
 
 fn main() {
-    let app = Application::default("/")
+    let app = Application::new("/")
         .middleware(
             middlewares::DefaultHeaders::build()
                 .header("X-Version", "0.2")
