--- a/guide/src/qs_12.md
+++ b/guide/src/qs_12.md
@@ -16,7 +16,7 @@ fn index(req: HttpRequest) -> Result<fs::NamedFile> {
 }
 
 fn main() {
-    Application::default("/")
+    Application::new("/")
         .resource(r"/a/{tail:.*}", |r| r.method(Method::GET).f(index))
         .finish();
 }
@@ -32,7 +32,7 @@ To serve files from specific directory and sub-directories `StaticFiles` could b
 use actix_web::*;
 
 fn main() {
-    Application::default("/")
+    Application::new("/")
         .resource("/static", |r| r.h(fs::StaticFiles::new(".", true)))
         .finish();
 }
