--- a/guide/src/qs_13.md
+++ b/guide/src/qs_13.md
@@ -26,8 +26,8 @@ fn main() {
     let pkcs12 = Pkcs12::from_der(&pkcs12).unwrap().parse("12345").unwrap();
 
     HttpServer::new(
-        Application::default("/")
-            .route("/index.html", |r| r.f(index))
+        Application::new("/")
+            .resource("/index.html", |r| r.f(index))
         .serve_tls::<_, ()>("127.0.0.1:8080", pkcs12).unwrap();
 }
 ```
