simplify Application creation; update url dispatch guide section

--- a/guide/src/qs_12.md
+++ b/guide/src/qs_12.md
@@ -16,7 +16,7 @@ fn index(req: HttpRequest) -> Result<fs::NamedFile> {
 }
 
 fn main() {
-    Application::new("/")
+    Application::new()
         .resource(r"/a/{tail:.*}", |r| r.method(Method::GET).f(index))
         .finish();
 }
@@ -34,7 +34,7 @@ And this name has to be used in `StaticFile` constructor.
 use actix_web::*;
 
 fn main() {
-    Application::new("/")
+    Application::new()
         .resource("/static/{tail:.*}", |r| r.h(fs::StaticFiles::new("tail", ".", true)))
         .finish();
 }
