--- a/guide/src/qs_4_5.md
+++ b/guide/src/qs_4_5.md
@@ -27,7 +27,7 @@ fn index(req: HttpRequest) -> io::Result<fs::NamedFile> {
 }
 #
 # fn main() {
-#     Application::new("/")
+#     Application::new()
 #         .resource(r"/a/index.html", |r| r.f(index))
 #         .finish();
 # }
@@ -57,7 +57,7 @@ fn index(req: HttpRequest) -> Result<&'static str, MyError> {
 }
 #
 # fn main() {
-#     Application::new("/")
+#     Application::new()
 #         .resource(r"/a/index.html", |r| r.f(index))
 #         .finish();
 # }
@@ -99,7 +99,7 @@ fn index(req: HttpRequest) -> Result<&'static str, MyError> {
 }
 #
 # fn main() {
-#     Application::new("/")
+#     Application::new()
 #         .resource(r"/a/index.html", |r| r.f(index))
 #         .finish();
 # }
@@ -126,7 +126,7 @@ fn index(req: HttpRequest) -> Result<&'static str> {
     Ok(result.map_err(error::ErrorBadRequest)?)
 }
 # fn main() {
-#     Application::new("/")
+#     Application::new()
 #         .resource(r"/a/index.html", |r| r.f(index))
 #         .finish();
 # }
