--- a/guide/src/qs_10.md
+++ b/guide/src/qs_10.md
@@ -20,7 +20,7 @@ use actix_web::Application;
 use actix_web::middlewares::Logger;
 
 fn main() {
-    Application::new("/")
+    Application::new()
        .middleware(Logger::default())
        .middleware(Logger::new("%a %{User-Agent}i"))
        .finish();
@@ -71,7 +71,7 @@ Tto set default response headers `DefaultHeaders` middleware could be used.
 use actix_web::*;
 
 fn main() {
-    let app = Application::new("/")
+    let app = Application::new()
         .middleware(
             middlewares::DefaultHeaders::build()
                 .header("X-Version", "0.2")
