--- a/guide/src/qs_10.md
+++ b/guide/src/qs_10.md
@@ -63,8 +63,8 @@ INFO:actix_web::middlewares::logger: 127.0.0.1:59947 [02/Dec/2017:00:22:40 -0800
 
 ## Default headers
 
-Tto set default response headers `DefaultHeaders` middleware could be used.
-*DefaultHeaders* middleware does not set header if response headers already contains it.
+To set default response headers `DefaultHeaders` middleware could be used.
+*DefaultHeaders* middleware does not set header if response headers contains header.
 
 ```rust
 # extern crate actix_web;
