--- a/guide/src/qs_3_5.md
+++ b/guide/src/qs_3_5.md
@@ -1,5 +1,6 @@
 # Server
 
+
 ## Multi-threading
 
 Http server automatically starts number of http workers, by default
@@ -52,7 +53,7 @@ fn main() {
 }
 ```
 
-Note on *HTTP/2* protocol over tls without prior knowlage, it requires
+Note on *HTTP/2.0* protocol over tls without prior knowlage, it requires
 [tls alpn](https://tools.ietf.org/html/rfc7301). At the moment only
 `openssl` has `alpn ` support.
 
@@ -99,6 +100,7 @@ use actix_web::*;
 fn index(req: HttpRequest) -> HttpResponse {
     HTTPOk.build()
         .connection_type(headers::ConnectionType::Close) // <- Close connection
+        .force_close()                                   // <- Alternative method
         .finish().unwrap()
 }
 # fn main() {}
