rename FromRequest trait to Responder

--- a/guide/src/qs_4_5.md
+++ b/guide/src/qs_4_5.md
@@ -5,11 +5,11 @@ and [`ResponseError` trait](../actix_web/error/trait.ResponseError.html)
 for handling handler's errors.
 Any error that implements `ResponseError` trait can be returned as error value.
 *Handler* can return *Result* object, actix by default provides 
-`FromRequest` implemenation for compatible result object. Here is implementation
+`Responder` implemenation for compatible result object. Here is implementation
 definition:
 
 ```rust,ignore
-impl<T: FromRequest, E: Into<Error>> FromRequest for Result<T, E>
+impl<T: Responder, E: Into<Error>> Responder for Result<T, E>
 ```
 
 And any error that implements `ResponseError` can be converted into `Error` object.
