--- a/guide/src/qs_3_5.md
+++ b/guide/src/qs_3_5.md
@@ -5,7 +5,7 @@
 
 Http server automatically starts number of http workers, by default
 this number is equal to number of logical cpu in the system. This number
-could be overriden with `HttpServer::threads()` method.
+could be overridden with `HttpServer::threads()` method.
 
 ```rust
 # extern crate actix_web;
@@ -53,7 +53,7 @@ fn main() {
 }
 ```
 
-Note on *HTTP/2.0* protocol over tls without prior knowlage, it requires
+Note on *HTTP/2.0* protocol over tls without prior knowledge, it requires
 [tls alpn](https://tools.ietf.org/html/rfc7301). At the moment only
 `openssl` has `alpn ` support.
 
@@ -62,7 +62,7 @@ for concrete example.
 
 ## Keep-Alive
 
-Actix can wait for requesta on a keep-alive connection. *Keep alive*
+Actix can wait for requests on a keep-alive connection. *Keep alive*
 connection behavior is defined by server settings.
 
  * `Some(75)` - enable 75 sec *keep alive* timer according request and response settings.
