--- a/guide/src/qs_14.md
+++ b/guide/src/qs_14.md
@@ -4,8 +4,8 @@
 
 At the moment of 1.0 release Diesel does not support asynchronous operations.
 But it possible to use `actix` synchronous actor system as a db interface api.
-Multiple sync actors could be run in parallel, in this case all of this actors
-process messages from the same queue (sync actors actually work in mpmc mode).
+Technically sync actors are worker style actors, multiple of them
+can be run in parallel and process messages from same queue (sync actors work in mpmc mode).
 
 Let's create simple db api that can insert new user row into sqlite table.
 We need to define sync actor and connection that this actor will use. Same approach
