--- a/guide/src/qs_3_5.md
+++ b/guide/src/qs_3_5.md
@@ -22,7 +22,7 @@ fn main() {
         || Application::new()
             .resource("/", |r| r.f(|_| httpcodes::HTTPOk)))
         .bind("127.0.0.1:59080").unwrap()
-        .start().unwrap();
+        .start();
 
 #     actix::Arbiter::system().send(actix::msgs::SystemExit(0));
     let _ = sys.run();
@@ -78,7 +78,8 @@ fn main() {
     HttpServer::new(
         || Application::new()
             .resource("/index.html", |r| r.f(index)))
-        .serve_ssl::<_, ()>("127.0.0.1:8080", pkcs12).unwrap();
+        .bind("127.0.0.1:8080").unwrap()
+        .serve_ssl(pkcs12).unwrap();
 }
 ```
 
