add multipart guide section

--- a/guide/src/qs_14.md
+++ b/guide/src/qs_14.md
@@ -121,7 +121,7 @@ fn index(req: HttpRequest<State>) -> Box<Future<Item=HttpResponse, Error=Error>>
 ```
 
 Full example is available in 
-[examples repository](https://github.com/actix/actix-web/tree/master/examples/diesel/).
+[examples directory](https://github.com/actix/actix-web/tree/master/examples/diesel/).
 
 More information on sync actors could be found in 
 [actix documentation](https://docs.rs/actix/0.3.3/actix/sync/index.html).
