--- a/guide/src/qs_13.md
+++ b/guide/src/qs_13.md
@@ -28,7 +28,8 @@ fn main() {
     HttpServer::new(
         || Application::new()
             .resource("/index.html", |r| r.f(index)))
-        .serve_ssl::<_, ()>("127.0.0.1:8080", pkcs12).unwrap();
+        .bind("127.0.0.1:8080").unwrap();
+        .serve_ssl(pkcs12).unwrap();
 }
 ```
 
