update guide example

--- a/guide/src/qs_10.md
+++ b/guide/src/qs_10.md
@@ -115,7 +115,7 @@ session data.
 # extern crate actix;
 # extern crate actix_web;
 use actix_web::*;
-use actix_web::middlewares::RequestSession;
+use actix_web::middlewares::{RequestSession, SessionStorage, CookieSessionBackend};
 
 fn index(mut req: HttpRequest) -> Result<&'static str> {
     // access session data
@@ -133,8 +133,8 @@ fn main() {
 #   let sys = actix::System::new("basic-example");
     HttpServer::new(
         || Application::new()
-            .middleware(middlewares::SessionStorage::new(          // <- create session middlewares
-                middlewares::CookieSessionBackend::build(&[0; 32]) // <- create cookie session backend
+            .middleware(SessionStorage::new(          // <- create session middlewares
+                CookieSessionBackend::build(&[0; 32]) // <- create cookie session backend
                     .secure(false)
                     .finish()
             )))            
