update guide examples

--- a/guide/src/qs_3_5.md
+++ b/guide/src/qs_3_5.md
@@ -47,7 +47,7 @@ fn main() {
     HttpServer::<TcpStream, SocketAddr, _, _>::new(
         || Application::new()
             .resource("/", |r| r.f(|_| httpcodes::HTTPOk)))
-        .threads(4); // <- Start 4 threads
+        .threads(4); // <- Start 4 workers
 }
 ```
 
@@ -88,7 +88,7 @@ Note on *HTTP/2.0* protocol over tls without prior knowledge, it requires
 `openssl` has `alpn ` support.
 
 Please check [example](https://github.com/actix/actix-web/tree/master/examples/tls) 
-for concrete example.
+for full example.
 
 ## Keep-Alive
 
