cleanup more examples

--- a/guide/src/qs_14.md
+++ b/guide/src/qs_14.md
@@ -107,16 +107,16 @@ used for async handler registration.
 fn index(req: HttpRequest<State>) -> Box<Future<Item=HttpResponse, Error=Error>> {
     let name = &req.match_info()["name"];
 
-    Box::new(
-        // Send message to `DbExecutor` actor
-        req.state().db.call_fut(CreateUser{name: name.to_owned()})
-            .and_then(|res| {
-                match res {
-                    Ok(user) => ok(HTTPOk.build().json(user)),
-                    Err(_) => ok(HTTPInternalServerError.response())
-                }
-            })
-            .map_err(|e| error::ErrorInternalServerError(e).into()))
+    // Send message to `DbExecutor` actor
+    req.state().db.call_fut(CreateUser{name: name.to_owned()})
+        .from_err()
+        .and_then(|res| {
+            match res {
+                Ok(user) => Ok(httpcodes::HTTPOk.build().json(user)?),
+                Err(_) => Ok(httpcodes::HTTPInternalServerError.response())
+            }
+        })
+        .responder()
 }
 ```
 
