simplify guide examples

--- a/guide/src/qs_3_5.md
+++ b/guide/src/qs_3_5.md
@@ -20,7 +20,7 @@ fn main() {
 
     HttpServer::new(
         || Application::new()
-            .resource("/", |r| r.f(|_| httpcodes::HTTPOk)))
+            .resource("/", |r| r.h(httpcodes::HTTPOk)))
         .bind("127.0.0.1:59080").unwrap()
         .start();
 
@@ -46,7 +46,7 @@ use actix_web::*;
 fn main() {
     HttpServer::<TcpStream, SocketAddr, _, _>::new(
         || Application::new()
-            .resource("/", |r| r.f(|_| httpcodes::HTTPOk)))
+            .resource("/", |r| r.h(httpcodes::HTTPOk)))
         .threads(4); // <- Start 4 workers
 }
 ```
@@ -109,7 +109,7 @@ use actix_web::*;
 fn main() {
     HttpServer::<TcpStream, SocketAddr, _, _>::new(||
         Application::new()
-            .resource("/", |r| r.f(|r| httpcodes::HTTPOk)))
+            .resource("/", |r| r.h(httpcodes::HTTPOk)))
         .keep_alive(None); // <- Use `SO_KEEPALIVE` socket option.
 }
 ```
