fix typos in guide

--- a/guide/src/qs_4_5.md
+++ b/guide/src/qs_4_5.md
@@ -35,9 +35,9 @@ fn index(req: HttpRequest) -> io::Result<fs::NamedFile> {
 
 ## Custom error response
 
-To add support for custom errors all we need to do just implement `ResponseError` trait.
-`ResponseError` trait has default implementation for `error_response()` method, it
-generates *500* response.
+To add support for custom errors, all we need to do is just implement `ResponseError` trait
+for custom error. `ResponseError` trait has default implementation
+for `error_response()` method, it generates *500* response.
 
 ```rust
 # extern crate actix_web;
@@ -50,6 +50,7 @@ struct MyError {
    name: &'static str
 }
 
+/// Use default implementation for `error_response()` method
 impl error::ResponseError for MyError {}
 
 fn index(req: HttpRequest) -> Result<&'static str, MyError> {
@@ -64,7 +65,7 @@ fn index(req: HttpRequest) -> Result<&'static str, MyError> {
 ```
 
 In this example *index* handler will always return *500* response. But it is easy
-to return different responses.
+to return different responses for different type of errors.
 
 ```rust
 # extern crate actix_web;
@@ -132,4 +133,4 @@ fn index(req: HttpRequest) -> Result<&'static str> {
 # }
 ```
 
-In this example *BAD REQUEST* response get generated for `MYError` error.
+In this example *BAD REQUEST* response get generated for `MyError` error.
