more info for middleware guide

--- a/guide/src/qs_10.md
+++ b/guide/src/qs_10.md
@@ -1,8 +1,68 @@
 # Middlewares
 
+Actix middlewares system allows to add additional behaviour to request/response processing.
+Middleware can hook into incomnig request process and modify request or halt request 
+processing and return response early. Also it can hook into response processing.
+
+Typically middlewares involves in following actions:
+
+* Pre-process the Request
+* Post-process a Response
+* Modify application state
+* Access external services (redis, logging, sessions)
+
+Middlewares are registered for each application and get executed in same order as 
+registraton order. In general, *middleware* is a type that implements 
+[*Middleware trait*](../actix_web/middlewares/trait.Middleware.html). Each method
+in this trait has default implementation. Each method can return result immidietly
+or *future* object.
+
+Here is example of simple middleware that adds request and response headers:
+
+```rust
+# extern crate http;
+# extern crate actix_web;
+use http::{header, HttpTryFrom};
+use actix_web::*;
+use actix_web::middlewares::{Middleware, Started, Response};
+
+struct Headers;  // <- Our middleware
+
+/// Middleware implementation, middlewares are generic over application state,
+/// so you can access state with `HttpRequest::state()` method.
+impl<S> Middleware<S> for Headers {
+
+    /// Method is called when request is ready. It may return
+    /// future, which should resolve before next middleware get called.
+    fn start(&self, req: &mut HttpRequest<S>) -> Started {
+        req.headers_mut().insert(
+            header::CONTENT_TYPE, header::HeaderValue::from_static("text/plain"));
+        Started::Done
+    }
+
+    /// Method is called when handler returns response,
+    /// but before sending http message to peer.
+    fn response(&self, req: &mut HttpRequest<S>, mut resp: HttpResponse) -> Response {
+        resp.headers_mut().insert(
+            header::HeaderName::try_from("X-VERSION").unwrap(),
+            header::HeaderValue::from_static("0.2"));
+        Response::Done(resp)
+    }
+}
+
+fn main() {
+    Application::new()
+       .middleware(Headers)  // <- Register middleware, this method could be called multiple times
+       .resource("/", |r| r.h(httpcodes::HTTPOk));
+}
+```
+
+Active provides several useful middlewares, like *logging*, *user sessions*, etc.
+
+
 ## Logging
 
-Logging is implemented as middleware. Middlewares get executed in same order as registraton order.
+Logging is implemented as middleware. 
 It is common to register logging middleware as first middleware for application. 
 Logging middleware has to be registered for each application.
 
