--- a/guide/src/qs_14.md
+++ b/guide/src/qs_14.md
@@ -8,7 +8,7 @@ Technically sync actors are worker style actors, multiple of them
 can be run in parallel and process messages from same queue (sync actors work in mpmc mode).
 
 Let's create simple db api that can insert new user row into sqlite table.
-We need to define sync actor and connection that this actor will use. Same approach
+We have to define sync actor and connection that this actor will use. Same approach
 could used for other databases.
 
 ```rust,ignore
@@ -24,13 +24,10 @@ impl Actor for DbExecutor {
 This is definition of our actor. Now we need to define *create user* message and response.
 
 ```rust,ignore
+#[derive(Message)]
+#[rtype(User, Error)]
 struct CreateUser {
     name: String,
-}
-
-impl ResponseType for CreateUser {
-    type Item = models::User;
-    type Error = Error;
 }
 ```
 
@@ -68,11 +65,11 @@ impl Handler<CreateUser> for DbExecutor {
 ```
 
 That is it. Now we can use *DbExecutor* actor from any http handler or middleware.
-All we need is to start *DbExecutor* actors and store address in state where http handler 
+All we need is to start *DbExecutor* actors and store address in a state where http handler 
 can access it.
 
 ```rust,ignore
-/// This is state where we sill store *DbExecutor* address.
+/// This is state where we store *DbExecutor* address.
 struct State {
     db: SyncAddress<DbExecutor>,
 }
@@ -97,7 +94,7 @@ fn main() {
 }
 ```
 
-And finally we can use this state in handler function. We get message response
+And finally we can use this state in a requst handler. We get message response
 asynchronously, so handler needs to return future object, also `Route::a()` needs to be 
 used for async handler registration.
 
