--- a/guide/src/qs_14.md
+++ b/guide/src/qs_14.md
@@ -31,7 +31,7 @@ struct CreateUser {
 }
 ```
 
-We can send `CreateUser` message to `DbExecutor` actor, and as result we can get
+We can send `CreateUser` message to `DbExecutor` actor, and as result we get
 `User` model. Now we need to define actual handler implementation for this message.
 
 ```rust,ignore
@@ -69,7 +69,7 @@ All we need is to start *DbExecutor* actors and store address in a state where h
 can access it.
 
 ```rust,ignore
-/// This is state where we store *DbExecutor* address.
+/// This is state where we will store *DbExecutor* address.
 struct State {
     db: SyncAddress<DbExecutor>,
 }
@@ -77,7 +77,7 @@ struct State {
 fn main() {
     let sys = actix::System::new("diesel-example");
 
-    // Start 3 db executors
+    // Start 3 parallele db executors
     let addr = SyncArbiter::start(3, || {
         DbExecutor(SqliteConnection::establish("test.db").unwrap())
     });
@@ -94,7 +94,7 @@ fn main() {
 }
 ```
 
-And finally we can use this state in a requst handler. We get message response
+And finally we can use address in a requst handler. We get message response
 asynchronously, so handler needs to return future object, also `Route::a()` needs to be 
 used for async handler registration.
 
