add server spawn method

--- a/guide/src/qs_3_5.md
+++ b/guide/src/qs_3_5.md
@@ -29,6 +29,35 @@ fn main() {
 }
 ```
 
+It is possible to start server in separate thread with *spawn()* method. In that
+case server spawns new thread and create new actix system in it. To stop
+this server send `StopServer` message.
+
+Http server is implemented as an actix actor. It is possible to communicate with server
+via messaging system. All start methods like `start()`, `start_ssl()`, etc returns
+address of the started http server. Actix http server accept several messages:
+
+* `PauseServer` - Pause accepting incoming connections
+* `ResumeServer` - Resume accepting incoming connections
+* `StopServer` - Stop incoming connection processing, stop all workers and exit
+
+```rust
+# extern crate futures;
+# extern crate actix;
+# extern crate actix_web;
+# use futures::Future;
+use actix_web::*;
+
+fn main() {
+    let addr = HttpServer::new(
+        || Application::new()
+             .resource("/", |r| r.h(httpcodes::HTTPOk)))
+        .bind("127.0.0.1:0").expect("Can not bind to 127.0.0.1:0")
+        .spawn();
+        
+    let _ = addr.call_fut(dev::StopServer).wait();  // <- Send `StopServer` message to server.
+}
+```
 
 ## Multi-threading
 
