fix guide example

--- a/guide/src/qs_3_5.md
+++ b/guide/src/qs_3_5.md
@@ -55,7 +55,7 @@ fn main() {
         .bind("127.0.0.1:0").expect("Can not bind to 127.0.0.1:0")
         .spawn();
         
-    let _ = addr.call_fut(dev::StopServer).wait();  // <- Send `StopServer` message to server.
+    let _ = addr.call_fut(dev::StopServer{graceful: true}).wait();  // <- Send `StopServer` message to server.
 }
 ```
 
